k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-showcase
  labels:
    app.kubernetes.io/name: devops-showcase
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: devops-showcase
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
